<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Sunday"
        android:title="@string/Sunday"
        app:showAsAction="always" />
    <item
        android:id="@+id/Monday"
        android:title="@string/Monday"
        app:showAsAction="always" />
    <item
        android:id="@+id/Tuesday"
        android:title="@string/Tuesday"
        app:showAsAction="always" />
    <item
        android:id="@+id/Wednesday"
        android:title="@string/Wednesday"
        app:showAsAction="always" />
    <item
        android:id="@+id/Thursday"
        android:title="@string/Thursday"
        app:showAsAction="always" />
    <item
        android:id="@+id/Friday"
        android:title="@string/Friday"
        app:showAsAction="always" />
    <item
        android:id="@+id/Saturday"
        android:title="@string/Saturday"
        app:showAsAction="always" />
</menu>